spacing issues on index

--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ body {
 
 .page-break2 {
     position: absolute;
-    top: 700px;
+    top: 750px;
     left: 50%;
     transform: translateX(-50%);
     background-color: red;
